// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|AutoLayout  Sticky  2-master/detail 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  width: 1600px;
  height: 1000px;
  background-color: lightgray;
}

.c3 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  padding-bottom: 0.625em;
  height: calc(100% - 0.625em);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c11 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  height: calc(100% - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c6 {
  margin-top: 0.625em;
  margin-left: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  width: 300px;
  height: calc(400px - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c9 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  width: 300px;
  height: calc(100% - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c10 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  height: calc(100% - 0.625em);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  margin-top: 0.625em;
  margin-left: 0.625em;
  margin-right: 0.625em;
  width: 300px;
  height: calc(400px - 0.625em);
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c8 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  width: 300px;
  height: calc(100% - 0.625em);
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c7:first-child {
  margin-top: 0;
}

.c7:last-child {
  margin-bottom: 0;
}

.c7,
input.c7 {
  font-size: 1.5em;
}

.c7 .c12 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={1000}
    width={1600}
  >
    <div
      className="c2"
      height="calc(100% - 0.625em)"
      wrap="wrap"
    >
      <div
        className="c3"
        width="100%"
      >
        <div
          className="c4"
          height="100%"
          width="100%"
          wrap="wrap"
        >
          <div
            className="sc-htpNat c5 c6"
            height="calc(400px - 0.625em)"
            width={300}
          >
            <h1
              className="c7"
              type="header"
            >
              Master
            </h1>
          </div>
          <div
            className="sc-htpNat c8 c9"
            height="calc(100% - 0.625em)"
            width={300}
          >
            <h1
              className="c7"
              type="header"
            >
              Master
            </h1>
          </div>
          <div
            className="sc-htpNat c10 c11"
            height="calc(100% - 0.625em)"
          >
            <h1
              className="c7"
              type="header"
            >
              Details
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|AutoLayout Dashboard 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  width: 1600px;
  height: 1000px;
  background-color: lightgray;
}

.c3 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  padding-bottom: 0.625em;
  height: calc(800px - 0.625em);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  margin-top: 0.625em;
  margin-left: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  width: 300px;
  height: calc(100% - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c9 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  height: calc(100% - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c11 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  width: 300px;
  height: calc(100% - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c12 {
  margin-top: 0.625em;
  margin-left: 0.625em;
  margin-right: 0.625em;
  width: 300px;
  height: calc(100% - 0.625em);
}

.c8 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  height: calc(100% - 0.625em);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  margin-top: 0.625em;
  margin-left: 0.625em;
  margin-right: 0.625em;
  width: 300px;
  height: calc(100% - 0.625em);
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c10 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  width: 300px;
  height: calc(100% - 0.625em);
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c7:first-child {
  margin-top: 0;
}

.c7:last-child {
  margin-bottom: 0;
}

.c7,
input.c7 {
  font-size: 1.5em;
}

.c7 .c13 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={1000}
    width={1600}
  >
    <div
      className="c2"
      height="calc(800px - 0.625em)"
      wrap="wrap"
    >
      <div
        className="c3"
        width="100%"
      >
        <div
          className="c4"
          height="100%"
          width="100%"
          wrap="wrap"
        >
          <div
            className="sc-htpNat c5 c6"
            height="calc(100% - 0.625em)"
            width={300}
          >
            <h1
              className="c7"
              type="header"
            >
              Master
            </h1>
          </div>
          <div
            className="sc-htpNat c8 c9"
            height="calc(100% - 0.625em)"
          >
            <h1
              className="c7"
              type="header"
            >
              Details
            </h1>
          </div>
          <div
            className="sc-htpNat c10 c11"
            height="calc(100% - 0.625em)"
            width={300}
          >
            <h1
              className="c7"
              type="header"
            >
              Master
            </h1>
          </div>
        </div>
      </div>
      <div
        className="c3"
        width="100%"
      >
        <div
          className="c4"
          height="100%"
          width="100%"
          wrap="wrap"
        >
          <div
            className="sc-htpNat c12 c6"
            height="calc(100% - 0.625em)"
            width={300}
          >
            <h1
              className="c7"
              type="header"
            >
              Master
            </h1>
          </div>
          <div
            className="sc-htpNat c8 c9"
            height="calc(100% - 0.625em)"
          >
            <h1
              className="c7"
              type="header"
            >
              Details
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|AutoLayout master/detail 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  width: 1600px;
  height: 1000px;
  background-color: lightgray;
}

.c3 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  padding-bottom: 0.625em;
  height: calc(100% - 0.625em);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  margin-top: 0.625em;
  margin-left: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  width: 300px;
  height: calc(100% - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c9 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  padding: 1.25em;
  height: calc(100% - 0.625em);
  border-radius: 3px;
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  box-sizing: border-box;
}

.c5 {
  margin-top: 0.625em;
  margin-left: 0.625em;
  margin-right: 0.625em;
  width: 300px;
  height: calc(100% - 0.625em);
}

.c8 {
  margin-top: 0.625em;
  margin-right: 0.625em;
  height: calc(100% - 0.625em);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c7:first-child {
  margin-top: 0;
}

.c7:last-child {
  margin-bottom: 0;
}

.c7,
input.c7 {
  font-size: 1.5em;
}

.c7 .c10 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={1000}
    width={1600}
  >
    <div
      className="c2"
      height="calc(100% - 0.625em)"
      wrap="wrap"
    >
      <div
        className="c3"
        width="100%"
      >
        <div
          className="c4"
          height="100%"
          width="100%"
          wrap="wrap"
        >
          <div
            className="sc-htpNat c5 c6"
            height="calc(100% - 0.625em)"
            width={300}
          >
            <h1
              className="c7"
              type="header"
            >
              Master
            </h1>
          </div>
          <div
            className="sc-htpNat c8 c9"
            height="calc(100% - 0.625em)"
          >
            <h1
              className="c7"
              type="header"
            >
              Details
            </h1>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|AutoLayout overview 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    README.md
  </p>
</div>
`;
